# patient-pose-assessment

./: .gitignore  README.md  environment.yaml  requirements.txt  setup.cfg
config/: base.yaml  eval.yaml  runner.yaml  train.yaml
config/architecture/: late-fusion-shared-weights.yaml  late-fusion.yaml  score-fusion-shared-weights.yaml  score-fusion.yaml  separate-network.yaml  single-network.yaml
src/patient_pose_assessment/: __init__.py
src/patient_pose_assessment/data/: __init__.py  depth.py  image_transforms.py  types.py
src/patient_pose_assessment/metrics/: __init__.py  metrics.py
src/patient_pose_assessment/model/: __init__.py  fusion_models.py  model_loader.py
