[metadata]
name = patient-pose-assessment
version = attr: patient_pose_assessment.VERSION
author = Dominik Mairhöfer, Manuel Laufer
description = Code for the SPIE Medical Imaging Paper "Patient pose assessment in radiography using time-of-flight cameras"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/INB-KI-SIGS/patient-pose-assessment
project_urls =
    Bug Tracker = https://github.com/INB-KI-SIGS/patient-pose-assessment/issues

[options]
package_dir =
    =src
packages=find:
python_requires = >=3.11
install_requires =
    pip
    setuptools
    torch
    torchvision
    opencv-python
    albumentations
    pydantic
    numpy
    tqdm
    tensorboard
    pyyaml
    matplotlib
    click
    coloredlogs
    scipy
    yaloader
    mllooper

[options.packages.find]
where=src
